--- a/dist.ini
+++ b/dist.ini
@@ -1,44 +1,13 @@
-version=1.47
+version=0.001
 
-name=Test-Perinci-CmdLine
+name=Test-Deeply-Float
 
 [@Author::PERLANCAR]
-
-:version=0.58
-[Prereqs / TestRequires]
-;Test::More=0.98
-
-[Prereqs / RuntimeRecommends]
+:version=0.593
 
 [Prereqs]
-perl=5.010001
-experimental=0
-;!lint_prereqs assume-used "undetected by scan_prereqs, used via system()"
-lib::filter=0
+perl=5.006
 strict=0
 warnings=0
-Capture::Tiny=0
-Devel::Confess=0
-Exporter=0
-File::Path=0
-File::Slurper=0
-File::Temp=0
-IPC::System::Options=0.27
-Perinci::CmdLine::Gen=0.42
-;!lint_prereqs assume-used "undetected by scan_prereqs, used via Riap"
-Perinci::Examples=0.79
-Perinci::Examples::Tiny=0.79
-Test::More=0.98
-
-[Extras / lint-prereqs / assume-provided]
-; the backends being tested, we do not list them as prereq due to obvious
-; circularity problem
-Perinci::CmdLine::Classic=0
-Perinci::CmdLine::Lite=0
-Perinci::CmdLine::Inline=0
-
-[Prereqs / DevelopX_spec]
--phase=develop
--relationship=x_spec
-Rinci=1.1.79
-
+Scalar::Util::Numeric=0
+Test::Builder::Module=0
